    BBS programs work
- RS232: removed undocumented feature to use unix domain sockets when the first
  character of a rs232 device is a pipe character, and instead used pipes, like
  it will be done on windows too
- Drives: fixed 1571CR emulation
- Drives: allow up to 83 tracks for 3.5inch mechs
- Drives: fixed clock rollover in rotation code
- Added PaperclipE, PaperclipSC, and Paperclip2 dongle support.
- Added woj userport joystick adapter emulation.
- provide fake sid hooks so hardsid can be used when fastsid is disabled
- Printer: new reworked emulation handles various CBM Printers: 2022, 4023, 8023,
  MPS801, MPS801, MPS803
- Printer: tweaked MPS page height, now allows print shop to print a greetings
  card on a single page.
- Printer: do not produce any output for non-printable codes
- Printer: when using the graphic output driver, only produce a new file when
  actually doing a formfeed.
- Build the list of available palette files at runtime, scan system path/dirs as
  needed. Also read extra info from the .vpl files. New palettes can now be just
  dropped into the data dir and they will appear in the UIs.
- allow color controls to be used with external palette and when no crt emulation
  is active.
- Added more realistic vicii color ram init code.
- CIA: shiftregister fixes
- CIA: fixed ICR timing/behaviour (This fixes the dd0dtest from the testbench)
- Support for ISA/PCI devices that were accessed via direct I/O was removed,
  since this would not work in any sane modern OS anymore. The affected devices
  are: parsid (windows), ssi2001 (all)
- Z80: OUT, OUTD, OUTI, OTIR, OTDR instruction fixes
- Fixed -initbreak reset so that the first instruction doesn't run


** Buildsystem
--------------

- add configure switch `--enable-experimental-devices` to enable experimental
  emulation of some devices.
- changed configure switch `--with-libcurl` to `--without-libcurl`.
- changed configure switch `--enable-lame` to `--with-lame`